--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /****************************************************************************
 1. RESET & COMPASS
 ****************************************************************************/
-@import url("https://fonts.googleapis.com/css?family=Raleway:400,500,600,700");
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600,700");
 @import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700");
 /* line 5, ../../../../../../../../../usr/local/lib/ruby/gems/2.5.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
@@ -563,18 +563,132 @@ VARIABLES DEFAULT
 /* line 10, ../sass/parts/_default.scss */
 body {
   position: relative;
-  color: #000;
-  background-color: #fff;
-  padding: 25px;
+  max-width: 1920px;
+  background-color: white;
+  color: black;
   font-family: Raleway;
   font-size: 13px;
   line-height: 100%;
   font-weight: 400;
   overflow-x: hidden;
-  margin: 0 auto;
-  text-align: center;
+  margin: 0px auto;
+  padding: 25px;
+}
+@media screen and (max-width: 1200px) {
+  /* line 10, ../sass/parts/_default.scss */
+  body {
+    padding: 15px;
+  }
+}
+@media screen and (max-width: 700px) {
+  /* line 10, ../sass/parts/_default.scss */
+  body {
+    padding: 10px;
+  }
 }
 
 /****************************************************************************
 3. STYLES
 ****************************************************************************/
+/* line 3, ../sass/parts/_header.scss */
+.header {
+  height: 660px;
+  text-align: center;
+  background: url(../img/header-background.jpg) no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding: 170px 0px 70px;
+}
+@media screen and (max-width: 700px) {
+  /* line 3, ../sass/parts/_header.scss */
+  .header {
+    height: 500px;
+    padding: 100px 0px 50px;
+  }
+}
+/* line 17, ../sass/parts/_header.scss */
+.header-logo {
+  display: block;
+  margin: 0px auto;
+}
+/* line 23, ../sass/parts/_header.scss */
+.header-title {
+  position: relative;
+  color: white;
+  font-family: "Playfair Display";
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 58px;
+  margin-top: 50px;
+}
+@media screen and (max-width: 1200px) {
+  /* line 23, ../sass/parts/_header.scss */
+  .header-title {
+    font-size: 36px;
+    line-height: 42px;
+  }
+}
+@media screen and (max-width: 700px) {
+  /* line 23, ../sass/parts/_header.scss */
+  .header-title {
+    font-size: 28px;
+    line-height: 34px;
+  }
+}
+/* line 42, ../sass/parts/_header.scss */
+.header-title:before {
+  position: absolute;
+  width: 80px;
+  height: 3px;
+  background-color: white;
+  content: "";
+  bottom: -20px;
+  left: 0px;
+  right: 0px;
+  margin: 0px auto;
+}
+/* line 55, ../sass/parts/_header.scss */
+.header-desc {
+  max-width: 450px;
+  color: white;
+  font-family: Raleway;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 23px;
+  margin: 60px auto 0px;
+}
+@media screen and (max-width: 1200px) {
+  /* line 55, ../sass/parts/_header.scss */
+  .header-desc {
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+@media screen and (max-width: 700px) {
+  /* line 55, ../sass/parts/_header.scss */
+  .header-desc {
+    font-size: 13px;
+    line-height: 16px;
+  }
+}
+/* line 75, ../sass/parts/_header.scss */
+.header-arrow {
+  background-color: inherit;
+  font-size: 20px;
+  color: white;
+  position: absolute;
+  bottom: 125px;
+  padding: 0px;
+  margin: 0px;
+  border-width: 0px;
+  border-style: initial;
+  border-color: initial;
+  border-image: initial;
+  outline: 0px;
+}
+@media screen and (max-width: 700px) {
+  /* line 75, ../sass/parts/_header.scss */
+  .header-arrow {
+    bottom: 25px;
+  }
+}
