--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,4 +14,4 @@
 /****************************************************************************
 3. STYLES
 ****************************************************************************/
-
+@import "parts/header";
