--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,3 +15,5 @@
 3. STYLES
 ****************************************************************************/
 @import "parts/header";
+@import "parts/menubar";
+@import "parts/aboutme";
