--- a/sass/parts/_default.scss
+++ b/sass/parts/_default.scss
@@ -9,6 +9,8 @@ VARIABLES DEFAULT
 
 body {
     position: relative;
+    display: flex;
+    flex-direction: column;
     max-width: 1920px;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
@@ -25,6 +27,6 @@ body {
     }
     
     @include breakpoint(700px) {
-        padding: 10px;
+        padding: 0 10px;
     }
 }
