--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -1,6 +1,7 @@
 // HEADER
 
 .header {
+    position: relative;
     height: 660px;
     text-align: center;
     background: url(../img/header-background.jpg) no-repeat;
