--- a/sass/parts/_default.scss
+++ b/sass/parts/_default.scss
@@ -8,22 +8,22 @@ VARIABLES DEFAULT
 /* SIZES */
 
 body {
-    position: relative;
     display: flex;
     flex-direction: column;
+    position: relative;
+    margin: 0px auto;
+    padding: 0 25px;
     max-width: 1920px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+    background-color: #fff;
+    color: #000;
     font-family: Raleway;
     font-size: 13px;
     line-height: 100%;
     font-weight: 400;
     overflow-x: hidden;
-    margin: 0px auto;
-    padding: 25px;
     
     @include breakpoint(1200px) {
-        padding: 15px;
+        padding: 0 15px;
     }
     
     @include breakpoint(700px) {
