Added REVIEWS Section (HTML Structure + styles + owlCarousel script)

--- a/css/style.css
+++ b/css/style.css
@@ -601,6 +601,7 @@ body {
   background-size: cover;
   background-position: center center;
   padding: 170px 0px 70px;
+  order: 1;
 }
 @media screen and (max-width: 700px) {
   /* line 3, ../sass/parts/_header.scss */
@@ -610,12 +611,16 @@ body {
     padding: 100px 0px 50px;
   }
 }
-/* line 19, ../sass/parts/_header.scss */
+/* line 20, ../sass/parts/_header.scss */
 .header-logo {
+  width: 141px;
+  height: 58px;
+  background: url(../img/logo.png) no-repeat;
   display: block;
   margin: 0px auto;
+  cursor: pointer;
 }
-/* line 25, ../sass/parts/_header.scss */
+/* line 30, ../sass/parts/_header.scss */
 .header-title {
   position: relative;
   color: white;
@@ -626,20 +631,20 @@ body {
   margin-top: 50px;
 }
 @media screen and (max-width: 1200px) {
-  /* line 25, ../sass/parts/_header.scss */
+  /* line 30, ../sass/parts/_header.scss */
   .header-title {
     font-size: 36px;
     line-height: 42px;
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 25, ../sass/parts/_header.scss */
+  /* line 30, ../sass/parts/_header.scss */
   .header-title {
     font-size: 28px;
     line-height: 34px;
   }
 }
-/* line 44, ../sass/parts/_header.scss */
+/* line 49, ../sass/parts/_header.scss */
 .header-title:before {
   position: absolute;
   width: 80px;
@@ -651,7 +656,7 @@ body {
   right: 0px;
   margin: 0px auto;
 }
-/* line 57, ../sass/parts/_header.scss */
+/* line 62, ../sass/parts/_header.scss */
 .header-desc {
   max-width: 450px;
   color: white;
@@ -662,20 +667,20 @@ body {
   margin: 60px auto 0px;
 }
 @media screen and (max-width: 1200px) {
-  /* line 57, ../sass/parts/_header.scss */
+  /* line 62, ../sass/parts/_header.scss */
   .header-desc {
     font-size: 14px;
     line-height: 18px;
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 57, ../sass/parts/_header.scss */
+  /* line 62, ../sass/parts/_header.scss */
   .header-desc {
     font-size: 13px;
     line-height: 16px;
   }
 }
-/* line 77, ../sass/parts/_header.scss */
+/* line 82, ../sass/parts/_header.scss */
 .header-arrow {
   background-color: inherit;
   font-size: 20px;
@@ -691,7 +696,7 @@ body {
   outline: 0px;
 }
 @media screen and (max-width: 700px) {
-  /* line 77, ../sass/parts/_header.scss */
+  /* line 82, ../sass/parts/_header.scss */
   .header-arrow {
     bottom: 25px;
   }
@@ -705,6 +710,7 @@ body {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #ebebeb;
+  order: 2;
 }
 @media screen and (max-width: 700px) {
   /* line 3, ../sass/parts/_menubar.scss */
@@ -712,18 +718,22 @@ body {
     order: 1;
   }
 }
-/* line 15, ../sass/parts/_menubar.scss */
+/* line 16, ../sass/parts/_menubar.scss */
 .menubar-logo {
+  width: 93px;
+  height: 18px;
+  display: block;
+  background: url(../img/logo-short-dark.png) no-repeat;
   margin-left: 55px;
 }
 @media screen and (max-width: 1200px) {
-  /* line 15, ../sass/parts/_menubar.scss */
+  /* line 16, ../sass/parts/_menubar.scss */
   .menubar-logo {
     margin-left: 0;
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 23, ../sass/parts/_menubar.scss */
+  /* line 28, ../sass/parts/_menubar.scss */
   .menubar-links {
     display: none;
     position: absolute;
@@ -737,38 +747,38 @@ body {
     padding: 15px 0;
   }
 }
-/* line 38, ../sass/parts/_menubar.scss */
+/* line 43, ../sass/parts/_menubar.scss */
 .menubar-links.toggle {
   display: block;
 }
-/* line 42, ../sass/parts/_menubar.scss */
+/* line 47, ../sass/parts/_menubar.scss */
 .menubar-links li {
   display: inline-block;
   margin-right: 55px;
 }
 @media screen and (max-width: 1200px) {
-  /* line 42, ../sass/parts/_menubar.scss */
+  /* line 47, ../sass/parts/_menubar.scss */
   .menubar-links li {
     margin-right: 25px;
   }
-  /* line 49, ../sass/parts/_menubar.scss */
+  /* line 54, ../sass/parts/_menubar.scss */
   .menubar-links li:last-of-type {
     margin-right: 0;
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 42, ../sass/parts/_menubar.scss */
+  /* line 47, ../sass/parts/_menubar.scss */
   .menubar-links li {
     display: block;
     margin-right: 0;
     margin-bottom: 5px;
   }
-  /* line 59, ../sass/parts/_menubar.scss */
+  /* line 64, ../sass/parts/_menubar.scss */
   .menubar-links li:last-of-type {
     margin-bottom: 0;
   }
 }
-/* line 64, ../sass/parts/_menubar.scss */
+/* line 69, ../sass/parts/_menubar.scss */
 .menubar-links li a {
   position: relative;
   display: block;
@@ -782,19 +792,19 @@ body {
   cursor: pointer;
 }
 @media screen and (max-width: 700px) {
-  /* line 64, ../sass/parts/_menubar.scss */
+  /* line 69, ../sass/parts/_menubar.scss */
   .menubar-links li a {
     color: #fff;
     font-size: 18px;
     line-height: 24px;
   }
-  /* line 82, ../sass/parts/_menubar.scss */
+  /* line 86, ../sass/parts/_menubar.scss */
   .menubar-links li a:hover, .menubar-links li a:active, .menubar-links li a:focus {
     color: #000;
     font-weight: 700;
   }
 }
-/* line 89, ../sass/parts/_menubar.scss */
+/* line 93, ../sass/parts/_menubar.scss */
 .menubar-links li.active a:after, .menubar-links li a:hover:after {
   position: absolute;
   content: "";
@@ -806,12 +816,12 @@ body {
   right: 0;
 }
 @media screen and (max-width: 700px) {
-  /* line 89, ../sass/parts/_menubar.scss */
+  /* line 93, ../sass/parts/_menubar.scss */
   .menubar-links li.active a:after, .menubar-links li a:hover:after {
     display: none;
   }
 }
-/* line 106, ../sass/parts/_menubar.scss */
+/* line 110, ../sass/parts/_menubar.scss */
 .menubar-togglemenu {
   display: block;
   padding: 0;
@@ -824,7 +834,7 @@ body {
   cursor: pointer;
 }
 @media screen and (min-width: 701px) {
-  /* line 106, ../sass/parts/_menubar.scss */
+  /* line 110, ../sass/parts/_menubar.scss */
   .menubar-togglemenu {
     display: none;
   }
@@ -833,6 +843,7 @@ body {
 /* line 3, ../sass/parts/_aboutme.scss */
 .aboutme {
   padding: 140px 0;
+  order: 3;
 }
 @media screen and (max-width: 1200px) {
   /* line 3, ../sass/parts/_aboutme.scss */
@@ -844,7 +855,6 @@ body {
   /* line 3, ../sass/parts/_aboutme.scss */
   .aboutme {
     padding: 50px 0;
-    order: 3;
   }
 }
 /* line 15, ../sass/parts/_aboutme.scss */
@@ -882,13 +892,11 @@ body {
   text-align: center;
 }
 
-@media screen and (max-width: 700px) {
-  /* line 3, ../sass/parts/_works.scss */
-  .works {
-    order: 4;
-  }
+/* line 3, ../sass/parts/_works.scss */
+.works {
+  order: 4;
 }
-/* line 9, ../sass/parts/_works.scss */
+/* line 6, ../sass/parts/_works.scss */
 .works-title {
   position: relative;
   margin-bottom: 70px;
@@ -901,12 +909,12 @@ body {
   text-align: center;
 }
 @media screen and (max-width: 1200px) {
-  /* line 9, ../sass/parts/_works.scss */
+  /* line 6, ../sass/parts/_works.scss */
   .works-title {
     margin-bottom: 35px;
   }
 }
-/* line 24, ../sass/parts/_works.scss */
+/* line 21, ../sass/parts/_works.scss */
 .works-title:after {
   position: absolute;
   content: "";
@@ -918,7 +926,7 @@ body {
   height: 3px;
   background-color: #d07c7c;
 }
-/* line 37, ../sass/parts/_works.scss */
+/* line 34, ../sass/parts/_works.scss */
 .works-posts {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -926,26 +934,26 @@ body {
   grid-auto-rows: minmax(370px, auto);
 }
 @media screen and (max-width: 1200px) {
-  /* line 37, ../sass/parts/_works.scss */
+  /* line 34, ../sass/parts/_works.scss */
   .works-posts {
     grid-gap: 15px;
   }
 }
 @media screen and (max-width: 992px) {
-  /* line 37, ../sass/parts/_works.scss */
+  /* line 34, ../sass/parts/_works.scss */
   .works-posts {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 37, ../sass/parts/_works.scss */
+  /* line 34, ../sass/parts/_works.scss */
   .works-posts {
     grid-gap: 10px;
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: minmax(300px, auto);
   }
 }
-/* line 57, ../sass/parts/_works.scss */
+/* line 54, ../sass/parts/_works.scss */
 .works-posts .works-singlepost {
   display: flex;
   justify-content: center;
@@ -964,7 +972,7 @@ body {
   cursor: pointer;
 }
 @media screen and (max-width: 700px) {
-  /* line 75, ../sass/parts/_works.scss */
+  /* line 72, ../sass/parts/_works.scss */
   .works-posts .works-singlepost:after {
     position: absolute;
     content: "";
@@ -977,7 +985,7 @@ body {
   }
 }
 @media screen and (min-width: 701px) {
-  /* line 89, ../sass/parts/_works.scss */
+  /* line 86, ../sass/parts/_works.scss */
   .works-posts .works-singlepost:hover:after {
     position: absolute;
     content: "";
@@ -988,142 +996,142 @@ body {
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 1;
   }
-  /* line 100, ../sass/parts/_works.scss */
+  /* line 97, ../sass/parts/_works.scss */
   .works-posts .works-singlepost:hover .inner {
     padding: 40px 80px;
   }
 }
-/* line 106, ../sass/parts/_works.scss */
+/* line 103, ../sass/parts/_works.scss */
 .works-posts .works-singlepost.nature {
   grid-row: 1;
   grid-column: 1/3;
   background-image: url("../img/nature.jpg");
 }
 @media screen and (max-width: 992px) {
-  /* line 106, ../sass/parts/_works.scss */
+  /* line 103, ../sass/parts/_works.scss */
   .works-posts .works-singlepost.nature {
     grid-row: 1;
     grid-column: 1/3;
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 106, ../sass/parts/_works.scss */
+  /* line 103, ../sass/parts/_works.scss */
   .works-posts .works-singlepost.nature {
     grid-row: 1;
     grid-column: 1;
   }
 }
-/* line 122, ../sass/parts/_works.scss */
+/* line 119, ../sass/parts/_works.scss */
 .works-posts .works-singlepost.urban {
   grid-row: 1/3;
   grid-column: 3;
   background-image: url("../img/urban.jpg");
 }
 @media screen and (max-width: 992px) {
-  /* line 122, ../sass/parts/_works.scss */
+  /* line 119, ../sass/parts/_works.scss */
   .works-posts .works-singlepost.urban {
     grid-row: 2/4;
     grid-column: 2;
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 122, ../sass/parts/_works.scss */
+  /* line 119, ../sass/parts/_works.scss */
   .works-posts .works-singlepost.urban {
     grid-row: 2;
     grid-column: 1;
   }
 }
-/* line 138, ../sass/parts/_works.scss */
+/* line 135, ../sass/parts/_works.scss */
 .works-posts .works-singlepost.people {
   grid-row: 2;
   grid-column: 1;
   background-image: url("../img/people.jpg");
 }
 @media screen and (max-width: 992px) {
-  /* line 138, ../sass/parts/_works.scss */
+  /* line 135, ../sass/parts/_works.scss */
   .works-posts .works-singlepost.people {
     grid-row: 2;
     grid-column: 1;
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 138, ../sass/parts/_works.scss */
+  /* line 135, ../sass/parts/_works.scss */
   .works-posts .works-singlepost.people {
     grid-row: 3;
     grid-column: 1;
   }
 }
-/* line 155, ../sass/parts/_works.scss */
+/* line 152, ../sass/parts/_works.scss */
 .works-posts .works-singlepost.wedding {
   grid-row: 2;
   grid-column: 2;
   background-image: url("../img/wedding.jpg");
 }
 @media screen and (max-width: 992px) {
-  /* line 155, ../sass/parts/_works.scss */
+  /* line 152, ../sass/parts/_works.scss */
   .works-posts .works-singlepost.wedding {
     grid-row: 3;
     grid-column: 1;
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 155, ../sass/parts/_works.scss */
+  /* line 152, ../sass/parts/_works.scss */
   .works-posts .works-singlepost.wedding {
     grid-row: 4;
     grid-column: 1;
   }
 }
-/* line 171, ../sass/parts/_works.scss */
+/* line 168, ../sass/parts/_works.scss */
 .works-posts .works-singlepost.architecture {
   grid-row: 3;
   grid-column: 1/3;
   background-image: url("../img/architecture.jpg");
 }
 @media screen and (max-width: 992px) {
-  /* line 171, ../sass/parts/_works.scss */
+  /* line 168, ../sass/parts/_works.scss */
   .works-posts .works-singlepost.architecture {
     grid-row: 4;
     grid-column: 1/3;
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 171, ../sass/parts/_works.scss */
+  /* line 168, ../sass/parts/_works.scss */
   .works-posts .works-singlepost.architecture {
     grid-row: 5;
     grid-column: 1;
   }
 }
-/* line 188, ../sass/parts/_works.scss */
+/* line 185, ../sass/parts/_works.scss */
 .works-posts .works-singlepost.animals {
   grid-row: 3;
   grid-column: 3;
   background-image: url("../img/animals.jpg");
 }
 @media screen and (max-width: 992px) {
-  /* line 188, ../sass/parts/_works.scss */
+  /* line 185, ../sass/parts/_works.scss */
   .works-posts .works-singlepost.animals {
     grid-row: 5;
     grid-column: 1/3;
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 188, ../sass/parts/_works.scss */
+  /* line 185, ../sass/parts/_works.scss */
   .works-posts .works-singlepost.animals {
     grid-row: 6;
     grid-column: 1;
   }
 }
-/* line 204, ../sass/parts/_works.scss */
+/* line 201, ../sass/parts/_works.scss */
 .works-posts .works-singlepost .inner {
   position: relative;
   padding: 10px 50px;
   z-index: 2;
-  -moz-transition: all,linear .1s;
-  -o-transition: all,linear .1s;
-  -webkit-transition: all,linear .1s;
-  transition: all,linear .1s;
+  -moz-transition: all,linear .3s;
+  -o-transition: all,linear .3s;
+  -webkit-transition: all,linear .3s;
+  transition: all,linear .3s;
 }
-/* line 213, ../sass/parts/_works.scss */
+/* line 210, ../sass/parts/_works.scss */
 .works-posts .works-singlepost .inner span {
   display: block;
   position: relative;
@@ -1134,7 +1142,7 @@ body {
   font-weight: 400;
   text-transform: uppercase;
 }
-/* line 223, ../sass/parts/_works.scss */
+/* line 220, ../sass/parts/_works.scss */
 .works-posts .works-singlepost .inner span::after {
   position: absolute;
   content: "";
@@ -1146,45 +1154,46 @@ body {
   height: 2px;
   background-color: #ffffff;
 }
-/* line 236, ../sass/parts/_works.scss */
+/* line 233, ../sass/parts/_works.scss */
 .works-posts .works-singlepost .inner .corner {
   position: absolute;
   width: 20px;
   height: 20px;
 }
-/* line 241, ../sass/parts/_works.scss */
+/* line 238, ../sass/parts/_works.scss */
 .works-posts .works-singlepost .inner .corner.top-left {
   left: 0;
   top: 0;
   border-left: 2px solid #fff;
   border-top: 2px solid #fff;
 }
-/* line 248, ../sass/parts/_works.scss */
+/* line 245, ../sass/parts/_works.scss */
 .works-posts .works-singlepost .inner .corner.top-right {
   right: 0;
   top: 0;
   border-right: 2px solid #fff;
   border-top: 2px solid #fff;
 }
-/* line 255, ../sass/parts/_works.scss */
+/* line 252, ../sass/parts/_works.scss */
 .works-posts .works-singlepost .inner .corner.bottom-left {
   left: 0;
   bottom: 0;
   border-left: 2px solid #fff;
   border-bottom: 2px solid #fff;
 }
-/* line 262, ../sass/parts/_works.scss */
+/* line 259, ../sass/parts/_works.scss */
 .works-posts .works-singlepost .inner .corner.bottom-right {
   right: 0;
   bottom: 0;
   border-right: 2px solid #fff;
   border-bottom: 2px solid #fff;
 }
-/* line 273, ../sass/parts/_works.scss */
+/* line 270, ../sass/parts/_works.scss */
 .works-button {
   display: block;
   margin: 60px auto 0;
   padding: 20px 50px;
+  min-width: 200px;
   border: 2px solid #d07c7c;
   outline: 0;
   background-color: inherit;
@@ -1195,9 +1204,119 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
+  -moz-transition: all,linear .3s;
+  -o-transition: all,linear .3s;
+  -webkit-transition: all,linear .3s;
+  transition: all,linear .3s;
 }
-/* line 288, ../sass/parts/_works.scss */
+/* line 290, ../sass/parts/_works.scss */
 .works-button:hover, .works-button:active, .works-button:focus {
   background-color: #d07c7c;
   color: #ffffff;
+}
+@media screen and (max-width: 700px) {
+  /* line 270, ../sass/parts/_works.scss */
+  .works-button {
+    margin-top: 30px;
+  }
+}
+
+/* line 3, ../sass/parts/_reviews.scss */
+.reviews {
+  padding: 140px 0;
+  text-align: center;
+  order: 5;
+}
+@media screen and (max-width: 1200px) {
+  /* line 3, ../sass/parts/_reviews.scss */
+  .reviews {
+    padding: 70px 0;
+  }
+}
+@media screen and (max-width: 700px) {
+  /* line 3, ../sass/parts/_reviews.scss */
+  .reviews {
+    padding: 50px 0;
+  }
+}
+/* line 16, ../sass/parts/_reviews.scss */
+.reviews-title {
+  position: relative;
+  color: #848282;
+  font-family: "Playfair Display";
+  font-size: 25px;
+  line-height: 30px;
+  font-weight: 400;
+  margin-bottom: 70px;
+}
+/* line 25, ../sass/parts/_reviews.scss */
+.reviews-title:after {
+  position: absolute;
+  content: "";
+  bottom: -10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 62px;
+  height: 3px;
+  background-color: #d07c7c;
+}
+/* line 41, ../sass/parts/_reviews.scss */
+.reviews-slider .slide-quote {
+  margin: 0 auto 25px;
+  max-width: 600px;
+  color: #848282;
+  font-family: Raleway;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 300;
+  font-style: italic;
+}
+@media screen and (max-width: 1200px) {
+  /* line 41, ../sass/parts/_reviews.scss */
+  .reviews-slider .slide-quote {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+@media screen and (max-width: 700px) {
+  /* line 41, ../sass/parts/_reviews.scss */
+  .reviews-slider .slide-quote {
+    font-size: 13px;
+    line-height: 16px;
+  }
+}
+/* line 62, ../sass/parts/_reviews.scss */
+.reviews-slider .slide-author {
+  color: #a0a0a0;
+  font-family: Raleway;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 18px;
+}
+@media screen and (max-width: 1200px) {
+  /* line 62, ../sass/parts/_reviews.scss */
+  .reviews-slider .slide-author {
+    font-size: 13px;
+    line-height: 16px;
+  }
+}
+@media screen and (max-width: 700px) {
+  /* line 62, ../sass/parts/_reviews.scss */
+  .reviews-slider .slide-author {
+    font-size: 12px;
+    line-height: 14px;
+  }
+}
+/* line 80, ../sass/parts/_reviews.scss */
+.reviews-slider .owl-dots .owl-dot {
+  outline: 0;
+}
+/* line 83, ../sass/parts/_reviews.scss */
+.reviews-slider .owl-dots .owl-dot.active span, .reviews-slider .owl-dots .owl-dot:hover span {
+  background-color: #d07c7c;
+}
+/* line 88, ../sass/parts/_reviews.scss */
+.reviews-slider .owl-nav.disabled + .owl-dots {
+  margin-top: 30px;
 }
