--- a/css/style.css
+++ b/css/style.css
@@ -1320,3 +1320,38 @@ body {
 .reviews-slider .owl-nav.disabled + .owl-dots {
   margin-top: 30px;
 }
+
+/* line 3, ../sass/parts/_video.scss */
+.video {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-top: 56.25%;
+  margin-bottom: 140px;
+  order: 6;
+}
+@media screen and (max-width: 1200px) {
+  /* line 3, ../sass/parts/_video.scss */
+  .video {
+    margin-bottom: 70px;
+  }
+}
+@media screen and (max-width: 700px) {
+  /* line 3, ../sass/parts/_video.scss */
+  .video {
+    margin-bottom: 50px;
+  }
+}
+/* line 20, ../sass/parts/_video.scss */
+.video iframe {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
